--- a/about.html
+++ b/about.html
@@ -15,14 +15,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   
   <link rel="shortcut icon" href="images/a-master-favicon.ico?crc=4276222306"/>
-  <title>about | the corner</title>
+  <title>About | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3763118919"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=445691848" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=520584139"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=51598505" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=3767681925"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=4113572293"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -54,9 +54,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <p>This blog is a bit of a mess. If you're reading this right now you're probably only here because Rooster referred you to it or because you have no idea where you are. Either way, on here you'll find posts about cryptocurrency trades (not financial advice, just opinions), my trading algorithms, and my progress at summer camps or internships. Occasionally a guest writer may appear on the blog, maybe to write a post on baking cakes or something I don't really know. If you'd like to stay updated with the madness, please subscribe to our newsletter mail list (can be done at the bottom of any page). Have fun reading!</p>
     </div>
    </div>
-   <div id="u94-4-wrapper">
-    <a class="nonblock nontext clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>the corner</p></a>
-   </div>
+   <a class="nonblock nontext" id="u94-4" href="index.html"><!-- rasterized frame --><div id="u94-4-wrapper"><img id="u94-4_img" alt="the corner" src="images/u94-4.png?crc=393981022" data-image-width="332"/></div></a>
    <div class="clearfix grpelem" id="pu166-4"><!-- column -->
     <div class="clearfix colelem" id="u166-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
      <p>The Story</p>
