--- a/bitcoin-101.html
+++ b/bitcoin-101.html
@@ -11,36 +11,39 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "postone.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "bitcoin-101.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/a-master-favicon.ico?crc=4276222306"/>
-  <title>post | the corner</title>
+  <title>Bitcoin 101 | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3763118919"/>
-  <link rel="stylesheet" type="text/css" href="css/postone.css?crc=4065064222" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=520584139"/>
+  <link rel="stylesheet" type="text/css" href="css/bitcoin-101.css?crc=13683848" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_postone.css?crc=4259637233"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_bitcoin-101.css?crc=4157986097"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/roboto:n5,n7,i7:default.js" type="text/javascript"></script>
-   </head>
+  <script src="https://webfonts.creativecloud.com/roboto:n5,i7,n7:default.js" type="text/javascript"></script>
+    <!--/*
+
+*/
+-->
+ </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu118"><!-- group -->
-    <div class="browser_width" id="u118-bw">
-     <div id="u118"><!-- simple frame --></div>
-    </div>
-    <div id="buttonu101-wrapper">
-     <a class="nonblock nontext Button clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
-    </div>
+   <div class="browser_width" id="u118-bw">
+    <div id="u118"><!-- simple frame --></div>
+   </div>
+   <div class="Button rounded-corners grpelem" id="buttonu457"><!-- container box --></div>
+   <div id="buttonu101-wrapper">
+    <a class="nonblock nontext Button clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
    </div>
    <div class="clearfix grpelem" id="pu410"><!-- column -->
     <div class="clip_frame colelem" id="u410"><!-- image -->
@@ -73,20 +76,23 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p id="u371-38">&nbsp;</p>
       <p><span id="u371-39">Note</span>: You can view my own trades in real-time at the &quot;Trades&quot; section of this website, which forwards my trades from BitMEX and Binance as I make them.</p>
       <p id="u371-42">&nbsp;</p>
-      <p>Thanks for reading. I'll see you next week.</p>
+      <p>Thanks for reading! Program posts are every Wednesday, internship updates are every Friday.</p>
      </div>
     </div>
    </div>
-   <div id="u94-4-wrapper">
-    <a class="nonblock nontext clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>the corner</p></a>
-   </div>
-   <div class="clearfix grpelem" id="u367-6" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-    <p>by <a class="nonblock" href="https://twitter.com/BitcoinRooster"><span id="u367-2">@BitcoinRooster</span></a></p>
+   <a class="nonblock nontext" id="u94-4" href="index.html"><!-- rasterized frame --><div id="u94-4-wrapper"><img id="u94-4_img" alt="the corner" src="images/u94-4.png?crc=393981022" data-image-width="332"/></div></a>
+   <div class="clearfix grpelem" id="pu458-4"><!-- column -->
+    <div class="clearfix colelem" id="u458-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <p>May 21, 2019</p>
+    </div>
+    <div class="clearfix colelem" id="u367-6" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <p>by <a class="nonblock" href="https://twitter.com/BitcoinRooster"><span id="u367-2">@BitcoinRooster</span></a></p>
+    </div>
    </div>
    <div id="buttonu109-wrapper">
     <a class="nonblock nontext Button clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
    </div>
-   <div class="verticalspacer" data-offset-top="4481" data-content-above-spacer="4481" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="4557" data-content-above-spacer="4557" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="browser_width grpelem" id="u200-bw">
     <div id="u200"><!-- group -->
      <div class="clearfix" id="u200_align_to_page">
