--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   
   <link rel="shortcut icon" href="images/a-master-favicon.ico?crc=4276222306"/>
-  <title>home | the corner</title>
+  <title>Home | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3763118919"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=270090088" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=520584139"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=123280793" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=3904756177"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=3776169388"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -295,12 +295,10 @@ span.hideMe {
     <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
    </div>
    <div class="clearfix grpelem" id="pu398"><!-- column -->
-    <a class="nonblock nontext clip_frame colelem" id="u398" href="postone.html"><!-- image --><img class="block" id="u398_img" src="images/bitcoin%20101%20(1).jpg?crc=3916845332" alt="" data-heightwidthratio="0.5634920634920635" data-image-width="378" data-image-height="213"/></a>
-    <a class="nonblock nontext Button rounded-corners clearfix colelem" id="buttonu133" href="postone.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u134-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p><span id="u134">Bitcoin 101: Currency of the future</span></p></div></a>
+    <a class="nonblock nontext clip_frame colelem" id="u398" href="bitcoin-101.html"><!-- image --><img class="block" id="u398_img" src="images/bitcoin%20101%20(1).jpg?crc=3916845332" alt="" data-heightwidthratio="0.5634920634920635" data-image-width="378" data-image-height="213"/></a>
+    <a class="nonblock nontext Button rounded-corners clearfix colelem" id="buttonu133" href="bitcoin-101.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u134-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p><span id="u134">Bitcoin 101: Currency of the future</span></p></div></a>
    </div>
-   <div id="u94-4-wrapper">
-    <a class="nonblock nontext MuseLinkActive clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>the corner</p></a>
-   </div>
+   <a class="nonblock nontext MuseLinkActive" id="u94-4" href="index.html"><!-- rasterized frame --><div id="u94-4-wrapper"><img id="u94-4_img" alt="the corner" src="images/u94-4.png?crc=393981022" data-image-width="332"/></div></a>
    <div class="Paragraph-Style size_fluid_width grpelem" id="u443" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- custom html -->
     
 <div style="display:block;height:100%;width:100%!important;clear:both;position: relative;overflow:scroll!important;">
