--- a/systems-week1.html
+++ b/systems-week1.html
@@ -11,18 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "trades.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "systems-week1.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/a-master-favicon.ico?crc=4276222306"/>
-  <title>Trades | The Corner</title>
+  <title>Systems Imagination, Week 1 | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=520584139"/>
-  <link rel="stylesheet" type="text/css" href="css/trades.css?crc=4008534360" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/systems-week1.css?crc=4069290546" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_trades.css?crc=4028641240"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_systems-week1.css?crc=3959618560"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -46,25 +46,65 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext Button clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
     </div>
    </div>
-   <a class="nonblock nontext clearfix grpelem" id="u448-4" href="https://twitter.com/BitcoinRooster" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Sorry, nothing here yet :)</p></a>
-   <a class="nonblock nontext" id="u94-4" href="index.html"><!-- rasterized frame --><div id="u94-4-wrapper"><img id="u94-4_img" alt="the corner" src="images/u94-4.png?crc=393981022" data-image-width="332"/></div></a>
-   <div class="clearfix grpelem" id="pu334"><!-- column -->
-    <div class="colelem" id="u334"><!-- simple frame --></div>
-    <div class="clearfix colelem" id="u279-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-     <p>WALL OF TRADES</p>
+   <div class="clearfix grpelem" id="pu515"><!-- column -->
+    <div class="clip_frame colelem" id="u515"><!-- image -->
+     <img class="block" id="u515_img" src="images/systems%20imagination.jpg?crc=3940510448" alt="" data-heightwidthratio="0.5620052770448549" data-image-width="379" data-image-height="213"/>
     </div>
-    <a class="nonblock nontext clearfix colelem" id="u276-4" href="https://twitter.com/BitcoinRooster" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>@BitcoinRooster</p></a>
+    <div class="Button rounded-corners clearfix colelem" id="buttonu487" data-visibility="changed" style="visibility:hidden"><!-- container box -->
+     <div class="clearfix grpelem" id="u488-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p><span id="u488">Systems Imagination: Week One</span></p>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="pbuttonu489"><!-- group -->
+     <div class="Button rounded-corners clearfix grpelem" id="buttonu489" data-visibility="changed" style="visibility:hidden"><!-- container box -->
+      <div class="clearfix grpelem" id="u490-17" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+       <p>Hi, all.</p>
+       <p id="u490-3">&nbsp;</p>
+       <p>Welcome to my first internship post on this blog.</p>
+       <p>&nbsp;</p>
+       <p>These posts will all be part of a series outlining my progress and experience at Systems Imagination, where I will be working for the summer. Unfortunately, the LaunchX camp seemed too far away for me to keep up with affairs back at home.</p>
+       <p>&nbsp;</p>
+       <p>Anyway, Systems is a somewhat small startup reminiscent of one of the ones in Silicon Valley. They work with neural networks and hypergraphs in order to link genes for cancer treatment. I was referred to their summer internship program by a friend and decided to apply. Now working, I hope to improve my understanding of both machine learning and data science this summer.</p>
+       <p>&nbsp;</p>
+       <p>The office is small but the employees are cheerful and happy to help with any issues you may encounter. This week, we ran through some basic introductory information and I programmed my first hypergraph, shown below.</p>
+       <p>&nbsp;</p>
+      </div>
+     </div>
+     <div class="clip_frame grpelem" id="u525"><!-- image -->
+      <img class="block" id="u525_img" src="images/hypergraph.png?crc=4222035297" alt="" data-heightwidthratio="0.6568627450980392" data-image-width="408" data-image-height="268"/>
+     </div>
+    </div>
+    <div class="Button rounded-corners clearfix colelem" id="buttonu535" data-visibility="changed" style="visibility:hidden"><!-- container box -->
+     <div class="clearfix grpelem" id="u536-13" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p>While this graph wasn't particularly difficult to engineer with the python libraries over at NetworkX, I still have much to learn, and very little understanding of how to implement these strange multi-legged patterns in cancer research.</p>
+      <p>&nbsp;</p>
+      <p>I also had a surplus of time to test out my new cryptocurrency arbitrage bots I've been working on, and are now running with $100 seed funding (post on these coming soon)!</p>
+      <p>&nbsp;</p>
+      <p>I hope next week to learn more about how these graphs can actually be given genetic information to work with, and how we can apply their returns to the medical industry as a whole.</p>
+      <p>&nbsp;</p>
+      <p>Thank you for reading. I'll see you next week!</p>
+     </div>
+    </div>
+   </div>
+   <a class="nonblock nontext" id="u94-4" href="index.html"><!-- rasterized frame --><div id="u94-4-wrapper"><img id="u94-4_img" alt="the corner" src="images/u94-4.png?crc=393981022" data-image-width="332"/></div></a>
+   <div class="clearfix grpelem" id="pu495-4"><!-- column -->
+    <div class="clearfix colelem" id="u495-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <p>May 21, 2019</p>
+    </div>
+    <div class="clearfix colelem" id="u491-6" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <p>by <a class="nonblock" href="https://twitter.com/BitcoinRooster"><span id="u491-2">@BitcoinRooster</span></a></p>
+    </div>
    </div>
    <div id="buttonu109-wrapper">
-    <a class="nonblock nontext Button ButtonSelected clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
+    <a class="nonblock nontext Button clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
    </div>
-   <div class="verticalspacer" data-offset-top="229" data-content-above-spacer="244" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="2894" data-content-above-spacer="2893" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="browser_width grpelem" id="u200-bw">
     <div id="u200"><!-- group -->
      <div class="clearfix" id="u200_align_to_page">
       <a class="nonblock nontext clearfix grpelem" id="u202-4" href="about.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>ABOUT</p></a>
       <a class="nonblock nontext clearfix grpelem" id="u201-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>HOME</p></a>
-      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u203-4" href="trades.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>TRADES</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u203-4" href="trades.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>TRADES</p></a>
      </div>
     </div>
    </div>
