--- a/trades.html
+++ b/trades.html
@@ -11,18 +11,20 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "trades.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "trades.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/a-master-favicon.ico?crc=4276222306"/>
   <title>Trades | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=520584139"/>
-  <link rel="stylesheet" type="text/css" href="css/trades.css?crc=4008534360" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4093442107"/>
+  <link rel="stylesheet" type="text/css" href="css/trades.css?crc=193687878" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_trades.css?crc=4028641240"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_trades.css?crc=3824530138"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3772226739"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_trades.css?crc=533346443" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -37,34 +39,79 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu118"><!-- group -->
-    <div class="browser_width" id="u118-bw">
-     <div id="u118"><!-- simple frame --></div>
+  <div class="breakpoint active" id="bp_infinity" data-min-width="622"><!-- responsive breakpoint node -->
+   <div class="clearfix borderbox" id="page"><!-- group -->
+    <div class="clearfix grpelem shared_content" id="pu118" data-content-guid="pu118_content"><!-- group -->
+     <div class="browser_width shared_content" id="u118-bw" data-content-guid="u118-bw_content">
+      <div id="u118"><!-- simple frame --></div>
+     </div>
+     <a class="nonblock nontext Button clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u102-4_0_content">about</p></div></a>
     </div>
-    <div id="buttonu101-wrapper">
-     <a class="nonblock nontext Button clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
+    <a class="nonblock nontext clearfix grpelem shared_content" id="u448-4" href="https://twitter.com/BitcoinRooster" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u448-4_content"><!-- content --><p>Sorry, nothing here yet :)</p></a>
+    <a class="nonblock nontext" id="u94-4" href="index.html"><!-- rasterized frame --><img class="temp_no_img_src" id="u94-4_img" alt="the corner" width="274" height="59" data-orig-src="images/u94-4.png?crc=364322365" src="images/blank.gif?crc=4208392903"/></a>
+    <div class="clearfix grpelem shared_content" id="pu334" data-content-guid="pu334_content"><!-- column -->
+     <div class="colelem shared_content" id="u334" data-content-guid="u334_content"><!-- simple frame --></div>
+     <div class="clearfix colelem shared_content" id="u279-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u279-4_content"><!-- content -->
+      <p>WALL OF TRADES</p>
+     </div>
+     <a class="nonblock nontext clearfix colelem shared_content" id="u276-4" href="https://twitter.com/BitcoinRooster" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u276-4_content"><!-- content --><p>@BitcoinRooster</p></a>
+    </div>
+    <a class="nonblock nontext Button ButtonSelected clearfix shared_content" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden" data-content-guid="buttonu109_content"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u110-4_0_content">trades</p></div></a>
+    <div class="verticalspacer" data-offset-top="245" data-content-above-spacer="244" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="browser_width grpelem shared_content" id="u200-bw" data-content-guid="u200-bw_content">
+     <div id="u200"><!-- group -->
+      <div class="clearfix" id="u200_align_to_page">
+       <div class="clearfix grpelem" id="u1406"><!-- group -->
+        <a class="nonblock nontext clearfix grpelem" id="u202-4" href="about.html" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u202-4_0_content">ABOUT</p></a>
+        <a class="nonblock nontext clearfix grpelem" id="u201-4" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u201-4_0_content">HOME</p></a>
+        <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u203-4" href="trades.html" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u203-4_0_content">TRADES</p></a>
+       </div>
+      </div>
+     </div>
     </div>
    </div>
-   <a class="nonblock nontext clearfix grpelem" id="u448-4" href="https://twitter.com/BitcoinRooster" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Sorry, nothing here yet :)</p></a>
-   <a class="nonblock nontext" id="u94-4" href="index.html"><!-- rasterized frame --><div id="u94-4-wrapper"><img id="u94-4_img" alt="the corner" src="images/u94-4.png?crc=393981022" data-image-width="332"/></div></a>
-   <div class="clearfix grpelem" id="pu334"><!-- column -->
-    <div class="colelem" id="u334"><!-- simple frame --></div>
-    <div class="clearfix colelem" id="u279-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-     <p>WALL OF TRADES</p>
+  </div>
+  <div class="breakpoint" id="bp_621" data-min-width="321" data-max-width="621"><!-- responsive breakpoint node -->
+   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu118_content"><!-- placeholder node --></span>
+    <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u448-4_content"><!-- placeholder node --></span>
+    <a class="nonblock nontext temp_no_id" href="index.html" data-orig-id="u94-4"><!-- rasterized frame --><img class="temp_no_id temp_no_img_src" alt="the corner" width="241" height="59" data-orig-src="images/u94-4.png?crc=364322365" data-orig-id="u94-4_img" src="images/blank.gif?crc=4208392903"/></a>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu334_content"><!-- placeholder node --></span>
+    <span class="nonblock nontext Button ButtonSelected clearfix placeholder" data-placeholder-for="buttonu109_content"><!-- placeholder node --></span>
+    <div class="verticalspacer" data-offset-top="336" data-content-above-spacer="335" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <span class="browser_width grpelem placeholder" data-placeholder-for="u200-bw_content"><!-- placeholder node --></span>
+   </div>
+  </div>
+  <div class="breakpoint" id="bp_320" data-max-width="320"><!-- responsive breakpoint node -->
+   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu118"><!-- group -->
+     <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
+     <a class="nonblock nontext temp_no_id" href="index.html" data-orig-id="u94-4"><!-- rasterized frame --><div id="u94-4-wrapper"><img class="temp_no_id temp_no_img_src" alt="the corner" data-orig-src="images/u94-4.png?crc=364322365" data-image-width="252" data-orig-id="u94-4_img" src="images/blank.gif?crc=4208392903"/></div></a>
+     <div id="buttonu101-wrapper">
+      <a class="nonblock nontext Button clearfix temp_no_id" href="about.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
+     </div>
     </div>
-    <a class="nonblock nontext clearfix colelem" id="u276-4" href="https://twitter.com/BitcoinRooster" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>@BitcoinRooster</p></a>
-   </div>
-   <div id="buttonu109-wrapper">
-    <a class="nonblock nontext Button ButtonSelected clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
-   </div>
-   <div class="verticalspacer" data-offset-top="229" data-content-above-spacer="244" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-   <div class="browser_width grpelem" id="u200-bw">
-    <div id="u200"><!-- group -->
-     <div class="clearfix" id="u200_align_to_page">
-      <a class="nonblock nontext clearfix grpelem" id="u202-4" href="about.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>ABOUT</p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u201-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>HOME</p></a>
-      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u203-4" href="trades.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>TRADES</p></a>
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu334"><!-- column -->
+     <span class="colelem placeholder" data-placeholder-for="u334_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u279-4_content"><!-- placeholder node --></span>
+     <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u276-4_content"><!-- placeholder node --></span>
+     <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u448-4_content"><!-- placeholder node --></span>
+    </div>
+    <div id="buttonu109-wrapper">
+     <a class="nonblock nontext Button ButtonSelected clearfix temp_no_id" href="trades.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
+    </div>
+    <div class="verticalspacer" data-offset-top="504" data-content-above-spacer="503" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="browser_width grpelem temp_no_id" data-orig-id="u200-bw">
+     <div class="temp_no_id" data-orig-id="u200"><!-- group -->
+      <div class="clearfix temp_no_id" data-orig-id="u200_align_to_page">
+       <div class="clearfix grpelem temp_no_id" data-orig-id="u1406"><!-- group -->
+        <div class="clearfix grpelem" id="pu201-4"><!-- column -->
+         <a class="nonblock nontext clearfix colelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u201-4"><!-- content --><span class="placeholder" data-placeholder-for="u201-4_0_content"><!-- placeholder node --></span></a>
+         <a class="nonblock nontext MuseLinkActive clearfix colelem temp_no_id" href="trades.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u203-4"><!-- content --><span class="placeholder" data-placeholder-for="u203-4_0_content"><!-- placeholder node --></span></a>
+         <a class="nonblock nontext clearfix colelem temp_no_id" href="about.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u202-4"><!-- content --><span class="placeholder" data-placeholder-for="u202-4_0_content"><!-- placeholder node --></span></a>
+        </div>
+       </div>
+      </div>
      </div>
     </div>
    </div>
@@ -80,7 +127,7 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.museresponsive"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
@@ -88,7 +135,7 @@ Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-Muse.Utils.showWidgetsWhenReady();/* body */
+$( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
 
