--- a/about.html
+++ b/about.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4093442107"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=39668475" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=204324485"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=4078442836" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3772226739"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=102037141" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=3910700007" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -52,9 +52,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p>This blog is a bit of a mess. If you're reading this right now you're probably only here because Rooster referred you to it or because you have no idea where you are. Either way, on here you'll find posts about cryptocurrency trades (not financial advice, just opinions), my trading algorithms, and my progress at summer camps or internships. Occasionally a guest writer may appear on the blog, maybe to write a post on baking cakes or something I don't really know. If you'd like to stay updated with the madness, please subscribe to our newsletter mail list (can be done at the bottom of any page). Have fun reading!</p>
      </div>
     </div>
-    <div class="clearfix grpelem" id="pu94-4"><!-- group -->
-     <a class="nonblock nontext" id="u94-4" href="index.html"><!-- rasterized frame --><img class="temp_no_img_src" id="u94-4_img" alt="the corner" width="274" height="59" data-orig-src="images/u94-4.png?crc=364322365" src="images/blank.gif?crc=4208392903"/></a>
-     <a class="nonblock nontext Button ButtonSelected clearfix shared_content" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden" data-content-guid="buttonu101_content"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u102-4_0_content">about</p></div></a>
+    <div class="clearfix grpelem shared_content" id="pu94-4" data-content-guid="pu94-4_content"><!-- group -->
+     <a class="nonblock nontext clearfix shared_content" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u94-4_content"><!-- content --><p>the corner</p></a>
+     <a class="nonblock nontext Button ButtonSelected clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u102-4_0_content">about</p></div></a>
     </div>
     <div class="clearfix grpelem shared_content" id="pu166-4" data-content-guid="pu166-4_content"><!-- column -->
      <div class="clearfix colelem shared_content" id="u166-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u166-4_content"><!-- content -->
@@ -81,12 +81,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <div class="breakpoint" id="bp_621" data-min-width="321" data-max-width="621"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <div class="clearfix grpelem" id="pu118"><!-- group -->
-     <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
-     <span class="nonblock nontext Button ButtonSelected clearfix placeholder" data-placeholder-for="buttonu101_content"><!-- placeholder node --></span>
-    </div>
+    <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu170-7_content"><!-- placeholder node --></span>
-    <a class="nonblock nontext temp_no_id" href="index.html" data-orig-id="u94-4"><!-- rasterized frame --><img class="temp_no_id temp_no_img_src" alt="the corner" width="241" height="59" data-orig-src="images/u94-4.png?crc=364322365" data-orig-id="u94-4_img" src="images/blank.gif?crc=4208392903"/></a>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu94-4_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu166-4_content"><!-- placeholder node --></span>
     <span class="nonblock nontext Button clearfix placeholder" data-placeholder-for="buttonu109_content"><!-- placeholder node --></span>
     <div class="verticalspacer" data-offset-top="895" data-content-above-spacer="894" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
@@ -94,34 +91,34 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
   </div>
   <div class="breakpoint" id="bp_320" data-max-width="320"><!-- responsive breakpoint node -->
-   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- column -->
-    <div class="position_content" id="page_position_content">
-     <div class="clearfix colelem temp_no_id" data-orig-id="pu118"><!-- group -->
-      <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
-      <a class="nonblock nontext temp_no_id" href="index.html" data-orig-id="u94-4"><!-- rasterized frame --><div id="u94-4-wrapper"><img class="temp_no_id temp_no_img_src" alt="the corner" data-orig-src="images/u94-4.png?crc=364322365" data-image-width="252" data-orig-id="u94-4_img" src="images/blank.gif?crc=4208392903"/></div></a>
-      <div id="buttonu101-wrapper">
-       <a class="nonblock nontext Button ButtonSelected clearfix temp_no_id" href="about.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
-      </div>
+   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
+    <div class="clearfix grpelem" id="pu118"><!-- group -->
+     <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
+     <div id="u94-4-wrapper">
+      <span class="nonblock nontext clearfix placeholder" data-placeholder-for="u94-4_content"><!-- placeholder node --></span>
      </div>
-     <div id="buttonu109-wrapper">
-      <a class="nonblock nontext Button clearfix pinned-colelem temp_no_id" href="trades.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
+     <div id="buttonu101-wrapper">
+      <a class="nonblock nontext Button ButtonSelected clearfix temp_no_id" href="about.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
      </div>
-     <div class="clearfix colelem temp_no_id" data-orig-id="pu166-4"><!-- column -->
-      <span class="clearfix colelem placeholder" data-placeholder-for="u166-4_content"><!-- placeholder node --></span>
-      <span class="clearfix colelem placeholder" data-placeholder-for="u170-7_content"><!-- placeholder node --></span>
-      <span class="clearfix colelem placeholder" data-placeholder-for="u337-4_content"><!-- placeholder node --></span>
-      <span class="clearfix colelem placeholder" data-placeholder-for="u338-4_content"><!-- placeholder node --></span>
-     </div>
-     <div class="verticalspacer" data-offset-top="1641" data-content-above-spacer="1640" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-     <div class="browser_width colelem temp_no_id" data-orig-id="u200-bw">
-      <div class="temp_no_id" data-orig-id="u200"><!-- group -->
-       <div class="clearfix temp_no_id" data-orig-id="u200_align_to_page">
-        <div class="clearfix grpelem temp_no_id" data-orig-id="u1406"><!-- group -->
-         <div class="clearfix grpelem" id="pu201-4"><!-- column -->
-          <a class="nonblock nontext clearfix colelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u201-4"><!-- content --><span class="placeholder" data-placeholder-for="u201-4_0_content"><!-- placeholder node --></span></a>
-          <a class="nonblock nontext clearfix colelem temp_no_id" href="trades.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u203-4"><!-- content --><span class="placeholder" data-placeholder-for="u203-4_0_content"><!-- placeholder node --></span></a>
-          <a class="nonblock nontext MuseLinkActive clearfix colelem temp_no_id" href="about.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u202-4"><!-- content --><span class="placeholder" data-placeholder-for="u202-4_0_content"><!-- placeholder node --></span></a>
-         </div>
+    </div>
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu166-4"><!-- column -->
+     <span class="clearfix colelem placeholder" data-placeholder-for="u166-4_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u170-7_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u337-4_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u338-4_content"><!-- placeholder node --></span>
+    </div>
+    <div id="buttonu109-wrapper">
+     <a class="nonblock nontext Button clearfix temp_no_id" href="trades.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
+    </div>
+    <div class="verticalspacer" data-offset-top="1641" data-content-above-spacer="1640" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="browser_width grpelem temp_no_id" data-orig-id="u200-bw">
+     <div class="temp_no_id" data-orig-id="u200"><!-- group -->
+      <div class="clearfix temp_no_id" data-orig-id="u200_align_to_page">
+       <div class="clearfix grpelem temp_no_id" data-orig-id="u1406"><!-- group -->
+        <div class="clearfix grpelem" id="pu201-4"><!-- column -->
+         <a class="nonblock nontext clearfix colelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u201-4"><!-- content --><span class="placeholder" data-placeholder-for="u201-4_0_content"><!-- placeholder node --></span></a>
+         <a class="nonblock nontext clearfix colelem temp_no_id" href="trades.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u203-4"><!-- content --><span class="placeholder" data-placeholder-for="u203-4_0_content"><!-- placeholder node --></span></a>
+         <a class="nonblock nontext MuseLinkActive clearfix colelem temp_no_id" href="about.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u202-4"><!-- content --><span class="placeholder" data-placeholder-for="u202-4_0_content"><!-- placeholder node --></span></a>
         </div>
        </div>
       </div>
