--- a/bitcoin-101.html
+++ b/bitcoin-101.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Bitcoin 101 | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4093442107"/>
-  <link rel="stylesheet" type="text/css" href="css/bitcoin-101.css?crc=3938007648" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=204324485"/>
+  <link rel="stylesheet" type="text/css" href="css/bitcoin-101.css?crc=3856037875" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_bitcoin-101.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3772226739"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_bitcoin-101.css?crc=3905179189" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_bitcoin-101.css?crc=475784286" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -81,8 +81,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <a class="nonblock nontext" id="u94-4" href="index.html"><!-- rasterized frame --><img class="temp_no_img_src" id="u94-4_img" alt="the corner" width="274" height="59" data-orig-src="images/u94-4.png?crc=364322365" src="images/blank.gif?crc=4208392903"/></a>
-    <div class="clearfix grpelem" id="pu458-4"><!-- column -->
+    <a class="nonblock nontext clearfix shared_content" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u94-4_content"><!-- content --><p>the corner</p></a>
+    <div class="clearfix grpelem shared_content" id="pu458-4" data-content-guid="pu458-4_content"><!-- column -->
      <div class="clearfix colelem shared_content" id="u458-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u458-4_content"><!-- content -->
       <p>May 21, 2019</p>
      </div>
@@ -108,20 +108,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <div class="breakpoint" id="bp_621" data-min-width="321" data-max-width="621"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
-    <span class="Button rounded-corners grpelem placeholder" data-placeholder-for="buttonu457_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext Button clearfix placeholder" data-placeholder-for="buttonu101_content"><!-- placeholder node --></span>
-    <div class="clearfix grpelem" id="pbuttonu408"><!-- column -->
+    <div class="clearfix grpelem" id="pbuttonu457"><!-- column -->
+     <span class="Button rounded-corners colelem placeholder" data-placeholder-for="buttonu457_content"><!-- placeholder node --></span>
      <span class="Button rounded-corners clearfix colelem placeholder" data-placeholder-for="buttonu408_content"><!-- placeholder node --></span>
      <span class="Button rounded-corners clearfix colelem placeholder" data-placeholder-for="buttonu370_content"><!-- placeholder node --></span>
     </div>
-    <a class="nonblock nontext temp_no_id" href="index.html" data-orig-id="u94-4"><!-- rasterized frame --><img class="temp_no_id temp_no_img_src" alt="the corner" width="241" height="59" data-orig-src="images/u94-4.png?crc=364322365" data-orig-id="u94-4_img" src="images/blank.gif?crc=4208392903"/></a>
-    <div class="clearfix grpelem temp_no_id" data-orig-id="pu410"><!-- column -->
-     <div class="clip_frame colelem temp_no_id" data-orig-id="u410"><!-- image -->
-      <img class="block temp_no_id temp_no_img_src" data-orig-src="images/bitcoin%20101%20(1).jpg?crc=3916845332" alt="" data-heightwidthratio="0.563265306122449" data-image-width="245" data-image-height="138" data-orig-id="u410_img" src="images/blank.gif?crc=4208392903"/>
-     </div>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u458-4_content"><!-- placeholder node --></span>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u367-6_content"><!-- placeholder node --></span>
+    <span class="nonblock nontext clearfix placeholder" data-placeholder-for="u94-4_content"><!-- placeholder node --></span>
+    <div class="clip_frame grpelem temp_no_id" data-orig-id="u410"><!-- image -->
+     <img class="block temp_no_id temp_no_img_src" data-orig-src="images/bitcoin%20101%20(1).jpg?crc=3916845332" alt="" data-heightwidthratio="0.563265306122449" data-image-width="245" data-image-height="138" data-orig-id="u410_img" src="images/blank.gif?crc=4208392903"/>
     </div>
+    <span class="nonblock nontext Button clearfix placeholder" data-placeholder-for="buttonu101_content"><!-- placeholder node --></span>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu458-4_content"><!-- placeholder node --></span>
     <span class="nonblock nontext Button clearfix placeholder" data-placeholder-for="buttonu109_content"><!-- placeholder node --></span>
     <div class="verticalspacer" data-offset-top="6759" data-content-above-spacer="6758" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="browser_width grpelem placeholder" data-placeholder-for="u200-bw_content"><!-- placeholder node --></span>
@@ -132,7 +129,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
     <span class="Button rounded-corners grpelem placeholder" data-placeholder-for="buttonu457_content"><!-- placeholder node --></span>
     <div class="clearfix grpelem" id="pu94-4"><!-- group -->
-     <a class="nonblock nontext temp_no_id" href="index.html" data-orig-id="u94-4"><!-- rasterized frame --><div id="u94-4-wrapper"><img class="temp_no_id temp_no_img_src" alt="the corner" data-orig-src="images/u94-4.png?crc=364322365" data-image-width="252" data-orig-id="u94-4_img" src="images/blank.gif?crc=4208392903"/></div></a>
+     <div id="u94-4-wrapper">
+      <span class="nonblock nontext clearfix placeholder" data-placeholder-for="u94-4_content"><!-- placeholder node --></span>
+     </div>
      <div id="buttonu101-wrapper">
       <a class="nonblock nontext Button clearfix temp_no_id" href="about.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
      </div>
