--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4093442107"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=227358486" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=204324485"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3797304194" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3772226739"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=3828920038" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=109456873" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -317,7 +317,7 @@ span.hideMe {
      </div>
     </div>
     <div class="clearfix grpelem" id="pu94-4"><!-- group -->
-     <a class="nonblock nontext MuseLinkActive" id="u94-4" href="index.html"><!-- rasterized frame --><img class="temp_no_img_src" id="u94-4_img" alt="the corner" width="274" height="59" data-orig-src="images/u94-4.png?crc=364322365" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext MuseLinkActive clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p class="shared_content" data-content-guid="u94-4_0_content">the corner</p></a>
      <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u102-4_0_content">about</p></div></a>
     </div>
     <div class="grpelem shared_content" id="u1180" data-content-guid="u1180_content"><!-- simple frame --></div>
@@ -367,7 +367,7 @@ span.hideMe {
       </div>
      </div>
      <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
-     <a class="nonblock nontext MuseLinkActive temp_no_id" href="index.html" data-orig-id="u94-4"><!-- rasterized frame --><img class="temp_no_id temp_no_img_src" alt="the corner" width="241" height="59" data-orig-src="images/u94-4.png?crc=364322365" data-orig-id="u94-4_img" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext MuseLinkActive clearfix temp_no_id" href="index.html" data-orig-id="u94-4"><!-- content --><span class="placeholder" data-placeholder-for="u94-4_0_content"><!-- placeholder node --></span></a>
      <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="about.html" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
      <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="trades.html" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
     </div>
@@ -392,7 +392,7 @@ span.hideMe {
     <div class="clearfix grpelem" id="ppu118"><!-- group -->
      <div class="clearfix grpelem" id="pu118"><!-- group -->
       <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
-      <a class="nonblock nontext MuseLinkActive temp_no_id" href="index.html" data-orig-id="u94-4"><!-- rasterized frame --><img class="temp_no_id temp_no_img_src" alt="the corner" width="252" height="59" data-orig-src="images/u94-4.png?crc=364322365" data-orig-id="u94-4_img" src="images/blank.gif?crc=4208392903"/></a>
+      <a class="nonblock nontext MuseLinkActive clearfix temp_no_id" href="index.html" data-orig-id="u94-4"><!-- content --><span class="placeholder" data-placeholder-for="u94-4_0_content"><!-- placeholder node --></span></a>
       <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="about.html" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
       <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="trades.html" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
      </div>
