--- a/systems-week1.html
+++ b/systems-week1.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Systems Imagination, Week 1 | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4093442107"/>
-  <link rel="stylesheet" type="text/css" href="css/systems-week1.css?crc=4025639734" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=204324485"/>
+  <link rel="stylesheet" type="text/css" href="css/systems-week1.css?crc=3931755719" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_systems-week1.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3772226739"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_systems-week1.css?crc=3920853949" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_systems-week1.css?crc=3866454556" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -41,11 +41,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 
   <div class="breakpoint active" id="bp_infinity" data-min-width="622"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox" id="page"><!-- group -->
-    <div class="clearfix grpelem shared_content" id="pu118" data-content-guid="pu118_content"><!-- group -->
+    <div class="clearfix grpelem" id="pu118"><!-- group -->
      <div class="browser_width shared_content" id="u118-bw" data-content-guid="u118-bw_content">
       <div id="u118"><!-- simple frame --></div>
      </div>
-     <a class="nonblock nontext Button clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u102-4_0_content">about</p></div></a>
+     <a class="nonblock nontext Button clearfix shared_content" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden" data-content-guid="buttonu101_content"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u102-4_0_content">about</p></div></a>
     </div>
     <div class="clearfix grpelem" id="pu515"><!-- column -->
      <div class="clip_frame colelem" id="u515"><!-- image -->
@@ -82,8 +82,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <a class="nonblock nontext" id="u94-4" href="index.html"><!-- rasterized frame --><img class="temp_no_img_src" id="u94-4_img" alt="the corner" width="274" height="59" data-orig-src="images/u94-4.png?crc=364322365" src="images/blank.gif?crc=4208392903"/></a>
-    <div class="clearfix grpelem" id="pu495-4"><!-- column -->
+    <a class="nonblock nontext clearfix shared_content" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u94-4_content"><!-- content --><p>the corner</p></a>
+    <div class="clearfix grpelem shared_content" id="pu495-4" data-content-guid="pu495-4_content"><!-- column -->
      <div class="clearfix colelem shared_content" id="u495-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u495-4_content"><!-- content -->
       <p>May 21, 2019</p>
      </div>
@@ -108,20 +108,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <div class="breakpoint" id="bp_621" data-min-width="321" data-max-width="621"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <span class="clearfix grpelem placeholder" data-placeholder-for="pu118_content"><!-- placeholder node --></span>
+    <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
     <div class="clearfix grpelem" id="pbuttonu487"><!-- column -->
      <span class="Button rounded-corners clearfix colelem placeholder" data-placeholder-for="buttonu487_content"><!-- placeholder node --></span>
      <span class="Button rounded-corners clearfix colelem placeholder" data-placeholder-for="buttonu489_content"><!-- placeholder node --></span>
      <span class="Button rounded-corners clearfix colelem placeholder" data-placeholder-for="buttonu535_content"><!-- placeholder node --></span>
     </div>
-    <a class="nonblock nontext temp_no_id" href="index.html" data-orig-id="u94-4"><!-- rasterized frame --><img class="temp_no_id temp_no_img_src" alt="the corner" width="241" height="59" data-orig-src="images/u94-4.png?crc=364322365" data-orig-id="u94-4_img" src="images/blank.gif?crc=4208392903"/></a>
-    <div class="clearfix grpelem temp_no_id" data-orig-id="pu515"><!-- column -->
-     <div class="clip_frame colelem temp_no_id" data-orig-id="u515"><!-- image -->
-      <img class="block temp_no_id temp_no_img_src" data-orig-src="images/systems%20imagination.jpg?crc=3940510448" alt="" data-heightwidthratio="0.563265306122449" data-image-width="245" data-image-height="138" data-orig-id="u515_img" src="images/blank.gif?crc=4208392903"/>
-     </div>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u495-4_content"><!-- placeholder node --></span>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u491-6_content"><!-- placeholder node --></span>
+    <span class="nonblock nontext clearfix placeholder" data-placeholder-for="u94-4_content"><!-- placeholder node --></span>
+    <div class="clip_frame grpelem temp_no_id" data-orig-id="u515"><!-- image -->
+     <img class="block temp_no_id temp_no_img_src" data-orig-src="images/systems%20imagination.jpg?crc=3940510448" alt="" data-heightwidthratio="0.563265306122449" data-image-width="245" data-image-height="138" data-orig-id="u515_img" src="images/blank.gif?crc=4208392903"/>
     </div>
+    <span class="nonblock nontext Button clearfix placeholder" data-placeholder-for="buttonu101_content"><!-- placeholder node --></span>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu495-4_content"><!-- placeholder node --></span>
     <span class="nonblock nontext Button clearfix placeholder" data-placeholder-for="buttonu109_content"><!-- placeholder node --></span>
     <div class="verticalspacer" data-offset-top="4033" data-content-above-spacer="4032" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="browser_width grpelem placeholder" data-placeholder-for="u200-bw_content"><!-- placeholder node --></span>
@@ -131,7 +129,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu118"><!-- group -->
      <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
-     <a class="nonblock nontext temp_no_id" href="index.html" data-orig-id="u94-4"><!-- rasterized frame --><div id="u94-4-wrapper"><img class="temp_no_id temp_no_img_src" alt="the corner" data-orig-src="images/u94-4.png?crc=364322365" data-image-width="252" data-orig-id="u94-4_img" src="images/blank.gif?crc=4208392903"/></div></a>
+     <div id="u94-4-wrapper">
+      <span class="nonblock nontext clearfix placeholder" data-placeholder-for="u94-4_content"><!-- placeholder node --></span>
+     </div>
      <div id="buttonu101-wrapper">
       <a class="nonblock nontext Button clearfix temp_no_id" href="about.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
      </div>
