--- a/trades.html
+++ b/trades.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Trades | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4093442107"/>
-  <link rel="stylesheet" type="text/css" href="css/trades.css?crc=193687878" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=204324485"/>
+  <link rel="stylesheet" type="text/css" href="css/trades.css?crc=4025732461" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_trades.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3772226739"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_trades.css?crc=533346443" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_trades.css?crc=4131717929" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -41,14 +41,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 
   <div class="breakpoint active" id="bp_infinity" data-min-width="622"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox" id="page"><!-- group -->
-    <div class="clearfix grpelem shared_content" id="pu118" data-content-guid="pu118_content"><!-- group -->
+    <div class="clearfix grpelem" id="pu118"><!-- group -->
      <div class="browser_width shared_content" id="u118-bw" data-content-guid="u118-bw_content">
       <div id="u118"><!-- simple frame --></div>
      </div>
-     <a class="nonblock nontext Button clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u102-4_0_content">about</p></div></a>
+     <a class="nonblock nontext Button clearfix shared_content" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden" data-content-guid="buttonu101_content"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u102-4_0_content">about</p></div></a>
     </div>
     <a class="nonblock nontext clearfix grpelem shared_content" id="u448-4" href="https://twitter.com/BitcoinRooster" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u448-4_content"><!-- content --><p>Sorry, nothing here yet :)</p></a>
-    <a class="nonblock nontext" id="u94-4" href="index.html"><!-- rasterized frame --><img class="temp_no_img_src" id="u94-4_img" alt="the corner" width="274" height="59" data-orig-src="images/u94-4.png?crc=364322365" src="images/blank.gif?crc=4208392903"/></a>
+    <a class="nonblock nontext clearfix shared_content" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u94-4_content"><!-- content --><p>the corner</p></a>
     <div class="clearfix grpelem shared_content" id="pu334" data-content-guid="pu334_content"><!-- column -->
      <div class="colelem shared_content" id="u334" data-content-guid="u334_content"><!-- simple frame --></div>
      <div class="clearfix colelem shared_content" id="u279-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u279-4_content"><!-- content -->
@@ -73,9 +73,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <div class="breakpoint" id="bp_621" data-min-width="321" data-max-width="621"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <span class="clearfix grpelem placeholder" data-placeholder-for="pu118_content"><!-- placeholder node --></span>
+    <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
     <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u448-4_content"><!-- placeholder node --></span>
-    <a class="nonblock nontext temp_no_id" href="index.html" data-orig-id="u94-4"><!-- rasterized frame --><img class="temp_no_id temp_no_img_src" alt="the corner" width="241" height="59" data-orig-src="images/u94-4.png?crc=364322365" data-orig-id="u94-4_img" src="images/blank.gif?crc=4208392903"/></a>
+    <div class="clearfix grpelem" id="pu94-4"><!-- group -->
+     <span class="nonblock nontext clearfix placeholder" data-placeholder-for="u94-4_content"><!-- placeholder node --></span>
+     <span class="nonblock nontext Button clearfix placeholder" data-placeholder-for="buttonu101_content"><!-- placeholder node --></span>
+    </div>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu334_content"><!-- placeholder node --></span>
     <span class="nonblock nontext Button ButtonSelected clearfix placeholder" data-placeholder-for="buttonu109_content"><!-- placeholder node --></span>
     <div class="verticalspacer" data-offset-top="336" data-content-above-spacer="335" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
@@ -86,7 +89,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu118"><!-- group -->
      <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
-     <a class="nonblock nontext temp_no_id" href="index.html" data-orig-id="u94-4"><!-- rasterized frame --><div id="u94-4-wrapper"><img class="temp_no_id temp_no_img_src" alt="the corner" data-orig-src="images/u94-4.png?crc=364322365" data-image-width="252" data-orig-id="u94-4_img" src="images/blank.gif?crc=4208392903"/></div></a>
+     <div id="u94-4-wrapper">
+      <span class="nonblock nontext clearfix placeholder" data-placeholder-for="u94-4_content"><!-- placeholder node --></span>
+     </div>
      <div id="buttonu101-wrapper">
       <a class="nonblock nontext Button clearfix temp_no_id" href="about.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
      </div>
